prueba de ci cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,11 +50,9 @@ build_image:
       - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
       - docker-compose -f docker-compose.yml build --no-cache --pull
       - echo "Obteniendo el tag con git describe..."
-      - echo "Tag obtenido:$IMAGE_TAG"
-      - export IMAGE_NAME_WITH_TAG="$IMAGE_NAME_BASE:$IMAGE_TAG"
-      - echo "Etiquetando imagen como:$IMAGE_NAME_WITH_TAG"
-      - docker tag spvending-api-image "$IMAGE_NAME_WITH_TAG"
-      - docker push "$IMAGE_NAME_WITH_TAG"
+      - echo "Tag obtenido:$IMAGE_NAME"
+      - docker tag spvending-api-image "$IMAGE_NAME"
+      - docker push "$IMAGE_NAME"
       - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
       - docker push "$IMAGE_NAME_LATEST"
 
