--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ variables:
   REGISTRY_URL: "localhost:5050"
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
-  IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
+
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
-  IMAGE_NAME: "$IMAGE_NAME_BASE:$IMAGE_TAG"
+  IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
   IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
@@ -18,6 +18,7 @@ stages:
 sonarqube:
   image: sonarsource/sonar-scanner-cli:latest
   stage: sonarqube
+
   tags:
     - sonar
   variables:
@@ -31,16 +32,16 @@ sonarqube:
     - echo "Iniciando análisis con SonarQube..."
     - >
       sonar-scanner -X
-      -Dsonar.projectVersion="$IMAGE_TAG"
+      -Dsonar.projectVersion=${CI_COMMIT_TAG}
   allow_failure: true
   rules:
     - if: $CI_COMMIT_TAG
       when: always
-
 build_image:
   stage: build
   tags:
     - build
+
   before_script:
     - echo "Validando nombre de imagen..."
     - echo "IMAGE_NAME:$IMAGE_NAME"
@@ -48,12 +49,13 @@ build_image:
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
     - docker-compose -f docker-compose.yml build --no-cache --pull
-    - echo "Etiquetando y pusheando imagen con tag:$IMAGE_NAME"
+    - echo "Obteniendo el tag con git describe..."
+    - echo "Tag obtenido:$IMAGE_NAME"
     - docker tag spvending-api-image "$IMAGE_NAME"
     - docker push "$IMAGE_NAME"
-    - echo "Etiquetando y pusheando imagen como latest:$IMAGE_NAME_LATEST"
     - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
     - docker push "$IMAGE_NAME_LATEST"
+
   after_script:
     - docker logout $REGISTRY_URL
   rules:
@@ -72,7 +74,7 @@ deploy_app:
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
   script:
-    - echo "=== DESPLEGANDO VERSIÓN:$IMAGE_TAG ==="
+    - echo "=== DESPLEGANDO VERSIÓN ==="
     - docker pull "$IMAGE_NAME_LATEST"
     - docker-compose -f docker-compose.deploy.yml down --remove-orphans
     - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
