--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,29 @@ variables:
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
 stages:
+  - test
   - sonarqube
   - build
   - deploy
+test:
+  stage: test
+  image: maven:3.9-eclipse-temurin-22
+  tags:
+    - build
+  script:
+    - mvn clean verify
+  artifacts:
+    paths:
+      - target/site/jacoco/jacoco.xml
+      - target/surefire-reports
+    expire_in: 1 hour
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: always
 
 sonarqube:
   image: sonarsource/sonar-scanner-cli:latest
   stage: sonarqube
-
   tags:
     - sonar
   variables:
@@ -33,10 +48,17 @@ sonarqube:
     - >
       sonar-scanner -X
       -Dsonar.projectVersion=${CI_COMMIT_TAG}
+  artifacts:
+    when: always
+  dependencies:
+    - test
   allow_failure: true
   rules:
     - if: $CI_COMMIT_TAG
       when: always
+  needs:
+    - job: test
+      artifacts: true
 build_image:
   stage: build
   tags:
