--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
 sonar.host.url=http://sonarqube:9000
 sonar.token=sqa_349560562cb2b9f448d2acf40f293463fa6589b1
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
