--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ test:
     - build
   script:
     - mvn clean verify
+    - echo "Verificando jacoco.xml..."
+    - ls -lah target/site/jacoco/
   rules:
     - if: $CI_COMMIT_TAG
       when: always
