prueba de ci cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,5 @@ sonar.qualityGate.wait=true
 sonar.host.url=http://sonarqube:9000
 sonar.token=sqa_349560562cb2b9f448d2acf40f293463fa6589b1
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.junit.reportPaths=target/surefire-reports
+sonar.jacoco.reportPaths=target/jacoco.exec
