--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Adrian-Manuel_spvending-managment_6257fc6e-9f9d-4e9a-86bf-aa2b6b983232
 sonar.projectName=spvending-managment
 sonar.sourceEncoding=UTF-8
-sonar.sources=src/main/java
+sonar.sources=spvending-manager/
 sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
@@ -9,4 +9,4 @@ sonar.host.url=http://sonarqube:9000
 sonar.token=sqa_349560562cb2b9f448d2acf40f293463fa6589b1
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.junit.reportPaths=target/surefire-reports
-sonar.jacoco.reportPaths=target/jacoco.exec
+
