prueba de ci cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Adrian-Manuel_spvending-managment_6257fc6e-9f9d-4e9a-86bf-aa2b6b983232
 sonar.projectName=spvending-managment
 sonar.sourceEncoding=UTF-8
-sonar.sources=spvending-manager/
+sonar.sources=.
 sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
