--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,21 +15,11 @@ stages:
   - sonarqube
   - build
   - deploy
-test:
-  stage: test
-  image: maven:3.9-eclipse-temurin-22
-  tags:
-    - build
-  script:
-    - mvn clean verify
-    - echo "Verificando jacoco.xml..."
-    - ls -lah target/site/jacoco/
-  rules:
-    - if: $CI_COMMIT_TAG
-      when: always
+
 
 sonarqube:
-  image: sonarsource/sonar-scanner-cli:latest
+  #image: sonarsource/sonar-scanner-cli:latest
+  image: maven:3.9-eclipse-temurin-22
   stage: sonarqube
   tags:
     - sonar
@@ -42,20 +32,14 @@ sonarqube:
       - .sonar/cache
   script:
     - echo "Iniciando análisis con SonarQube..."
+    - mvn clean verify
     - >
       sonar-scanner -X
       -Dsonar.projectVersion=${CI_COMMIT_TAG}
-  artifacts:
-    when: always
-  dependencies:
-    - test
   allow_failure: true
   rules:
     - if: $CI_COMMIT_TAG
       when: always
-  needs:
-    - job: test
-      artifacts: true
 build_image:
   stage: build
   tags:
