--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,11 @@ sonarqube:
   script:
     - echo "Iniciando análisis con SonarQube..."
     - mvn clean verify
+    - apt-get update && apt-get install -y wget unzip
+    - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+    - unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+    - mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+    - export PATH=$PATH:$(pwd)/sonar-scanner/bin
     - >
       sonar-scanner -X
       -Dsonar.projectVersion=${CI_COMMIT_TAG}
