--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,20 +31,31 @@ sonarqube:
     paths:
       - .sonar/cache
   script:
-    - echo "Iniciando análisis con SonarQube..."
-    - mvn clean verify
-    - apt-get update && apt-get install -y wget unzip
-    - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-    - unzip sonar-scanner-cli-5.0.1.3006-linux.zip
-    - mv sonar-scanner-5.0.1.3006-linux sonar-scanner
-    - export PATH=$PATH:$(pwd)/sonar-scanner/bin
-    - >
-      sonar-scanner -X
-      -Dsonar.projectVersion=${CI_COMMIT_TAG}
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+              git fetch origin main
+              MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+              TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+              if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+                echo "Iniciando análisis con SonarQube..."
+                - mvn clean verify
+                - apt-get update && apt-get install -y wget unzip
+                - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+                - unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+                - mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+                - export PATH=$PATH:$(pwd)/sonar-scanner/bin
+                echo "El tag proviene de main. Ejecutando análisis..."
+                sonar-scanner -X -Dsonar.projectVersion=${CI_COMMIT_TAG}
+              else
+                echo "El tag NO proviene de main. Saltando análisis."
+              fi
+            else
+              echo "No es un tag. Saltando análisis."
+      fi
+
   allow_failure: true
-  rules:
-    - if: $CI_COMMIT_TAG
-      when: always
+
+
 build_image:
   stage: build
   tags:
