--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,9 @@ sonarqube:
       fi
 
   allow_failure: true
-
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: always
 
 build_image:
   stage: build
