--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,12 +38,12 @@ sonarqube:
               TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
               if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
                 echo "Iniciando análisis con SonarQube..."
-                - mvn clean verify
-                - apt-get update && apt-get install -y wget unzip
-                - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-                - unzip sonar-scanner-cli-5.0.1.3006-linux.zip
-                - mv sonar-scanner-5.0.1.3006-linux sonar-scanner
-                - export PATH=$PATH:$(pwd)/sonar-scanner/bin
+                mvn clean verify
+                apt-get update && apt-get install -y wget unzip
+                wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+                unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+                mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+                export PATH=$PATH:$(pwd)/sonar-scanner/bin
                 echo "El tag proviene de main. Ejecutando análisis..."
                 sonar-scanner -X -Dsonar.projectVersion=${CI_COMMIT_TAG}
               else
@@ -53,7 +53,6 @@ sonarqube:
               echo "No es un tag. Saltando análisis."
       fi
 
-  allow_failure: true
   rules:
     - if: $CI_COMMIT_TAG
       when: always
