--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,6 @@ stages:
   - build
   - deploy
 
-
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
   image: maven:3.9-eclipse-temurin-22
@@ -63,12 +62,25 @@ build_image:
     - build
 
   script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
-    - docker-compose -f docker-compose.yml build --no-cache --pull
-    - docker tag spvending-api-image "$IMAGE_NAME"
-    - docker push "$IMAGE_NAME"
-    - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
-    - docker push "$IMAGE_NAME_LATEST"
+    - |
+        if [ -n "$CI_COMMIT_TAG" ]; then
+          git fetch origin main
+          MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+          TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+          if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+                    echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
+                    docker-compose -f docker-compose.yml build --no-cache --pull
+                    docker tag spvending-api-image "$IMAGE_NAME"
+                    docker push "$IMAGE_NAME"
+                    docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+                    docker push "$IMAGE_NAME_LATEST"
+            else
+                echo "El tag NO proviene de main. Saltando build."
+          fi
+            else
+              echo "No es un tag. Saltando build."
+        fi
+    
 
   after_script:
     - docker logout $REGISTRY_URL
