--- a/.gitlab-ci111.yml
+++ b/.gitlab-ci111.yml
@@ -1,23 +1,25 @@
 image: docker:latest
 
 variables:
-  REGISTRY_URL: "localhost:5050"
+  REGISTRY_URL: "gitlab:5050"
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
-  IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
+
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
+  IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
   IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
 stages:
+  - test
   - sonarqube
   - build
   - deploy
 
 sonarqube:
-  image: sonarsource/sonar-scanner-cli:latest
+  #image: sonarsource/sonar-scanner-cli:latest
+  image: maven:3.9-eclipse-temurin-22
   stage: sonarqube
-
   tags:
     - sonar
   variables:
@@ -28,33 +30,57 @@ sonarqube:
     paths:
       - .sonar/cache
   script:
-    - echo "Iniciando análisis con SonarQube..."
-    - >
-      sonar-scanner -X
-      -Dsonar.projectVersion=${CI_COMMIT_TAG}
-  allow_failure: true
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+              git fetch origin main
+              MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+              TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+              if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+                echo "Iniciando análisis con SonarQube..."
+                mvn clean verify
+                apt-get update && apt-get install -y wget unzip
+                wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+                unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+                mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+                export PATH=$PATH:$(pwd)/sonar-scanner/bin
+                echo "El tag proviene de main. Ejecutando análisis..."
+                sonar-scanner -X -Dsonar.projectVersion=${CI_COMMIT_TAG}
+              else
+                echo "El tag NO proviene de main. Saltando análisis."
+              fi
+            else
+              echo "No es un tag. Saltando análisis."
+      fi
+
   rules:
     - if: $CI_COMMIT_TAG
       when: always
+
 build_image:
   stage: build
   tags:
     - build
 
-  before_script:
-    - echo "Validando nombre de imagen..."
-    - export IMAGE_NAME="$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
-    - echo "IMAGE_NAME:$IMAGE_NAME"
-    - echo "IMAGE_NAME_LATEST:$IMAGE_NAME_LATEST"
   script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
-    - docker-compose -f docker-compose.yml build --no-cache --pull
-    - echo "Obteniendo el tag con git describe..."
-    - echo "Tag obtenido:$IMAGE_NAME"
-    - docker tag spvending-api-image "$IMAGE_NAME"
-    - docker push "$IMAGE_NAME"
-    - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
-    - docker push "$IMAGE_NAME_LATEST"
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+                  echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
+                  docker-compose -f docker-compose.yml build --no-cache --pull
+                  docker tag spvending-api-image "$IMAGE_NAME"
+                  docker push "$IMAGE_NAME"
+                  docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+                  docker push "$IMAGE_NAME_LATEST"
+          else
+              echo "El tag NO proviene de main. Saltando build."
+        fi
+          else
+            echo "No es un tag. Saltando build."
+      fi
+  
 
   after_script:
     - docker logout $REGISTRY_URL
@@ -74,12 +100,24 @@ deploy_app:
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
   script:
-    - echo "=== DESPLEGANDO VERSIÓN ==="
-    - docker pull "$IMAGE_NAME_LATEST"
-    - docker-compose -f docker-compose.deploy.yml down --remove-orphans
-    - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
-    - echo "=== CONTENEDORES EN EJECUCIÓN ==="
-    - docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+          echo "=== DESPLEGANDO VERSIÓN ==="
+          docker pull "$IMAGE_NAME_LATEST"
+          docker-compose -f docker-compose.deploy.yml down --remove-orphans
+          docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+          echo "=== CONTENEDORES EN EJECUCIÓN ==="
+          docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+        else
+          echo "El tag NO proviene de main. Saltando build."
+        fi
+      else
+        echo "No es un tag. Saltando build."
+      fi
   after_script:
     - docker logout $REGISTRY_URL
   rules:
