--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   spvending-api-image:
-    image: gitlab:5050/adrian-manuel/spvending-managment:latest
+    image: gitlab:5050/adrian-manuel/spvending-managment:${DEPLOY_TAG}
     container_name: spvending-api-container
     ports:
       - "8080:8080"
