--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,17 @@ image: docker:latest
 
 variables:
   REGISTRY_URL: "gitlab:5050"
+  REGISTRY_URL_REMOTE: "192.168.0.11:5050"
+
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
 
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
+  IMAGE_NAME_BASE_REMOTE: "$REGISTRY_URL_REMOTE/adrian-manuel/spvending-managment"
+
   IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
+  IMAGE_NAME_REMOTE: "$IMAGE_NAME_BASE_REMOTE:$CI_COMMIT_TAG"
+
   IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
@@ -99,7 +105,7 @@ deploy_production:
     DEPLOY_TAG: "latest"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL_REMOTE"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
@@ -108,9 +114,9 @@ deploy_production:
         TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
         if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
           echo "=== DESPLEGANDO VERSIÓN: $DEPLOY_TAG==="
-          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
-          docker-compose -f docker-compose.deploy.yml down --remove-orphans
-          docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+          docker pull "$IMAGE_NAME_BASE_REMOTE:$DEPLOY_TAG"
+          docker-compose -f docker-compose.deploy-production.yml down --remove-orphans
+          docker-compose -f docker-compose.deploy-production.yml up -d --force-recreate
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
         else
@@ -120,7 +126,7 @@ deploy_production:
         echo "No es un tag. Saltando build."
       fi
   after_script:
-    - docker logout $REGISTRY_URL
+    - docker logout $REGISTRY_URL_REMOTE
   rules:
     - if: $CI_COMMIT_TAG
       when: manual
