--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,6 +109,7 @@ deploy_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
+        git remote set-url origin "$CI_REPOSITORY_URL"
         git fetch origin main
         MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
         TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
