prueba de ci cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,8 +38,8 @@ sonarqube:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-              git fetch origin main
-              MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+              git fetch localgit main
+              MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" localgit/main)
               TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
               if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
                 echo "Iniciando análisis con SonarQube..."
@@ -70,8 +70,8 @@ build_image:
   script:
     - |
         if [ -n "$CI_COMMIT_TAG" ]; then
-          git fetch origin main
-          MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+          git fetch localgit main
+          MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" localgit/main)
           TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
           if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
                     echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
@@ -109,9 +109,9 @@ deploy_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-        git remote set-url origin "$CI_REPOSITORY_URL"
-        git fetch origin main
-        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+        git remote set-url localgit "$CI_REPOSITORY_URL"
+        git fetch localgit main
+        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" localgit/main)
         TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
         if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
           echo "=== DESPLEGANDO VERSIÓN: $DEPLOY_TAG==="
