--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ sonarqube:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-              git fetch localgit main
+              git fetch origin main
               MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
               TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
               if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
@@ -70,7 +70,7 @@ build_image:
   script:
     - |
         if [ -n "$CI_COMMIT_TAG" ]; then
-          git fetch localgit main
+          git fetch origin main
           MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
           TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
           if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
