--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,7 +109,7 @@ deploy_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-        git remote set-url localgit "$CI_REPOSITORY_URL"
+        git remote set-url localgit "$CI_REPOSITORY_URL_REMOTE"
         git fetch localgit main
         MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
         TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
