--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,12 @@ image: docker:latest
 
 variables:
   REGISTRY_URL: "gitlab:5050"
-  REGISTRY_URL_REMOTE: "192.168.0.11:5050"
+
 
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
-
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
-  IMAGE_NAME_BASE_REMOTE: "$REGISTRY_URL_REMOTE/adrian-manuel/spvending-managment"
-
   IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
-  IMAGE_NAME_REMOTE: "$IMAGE_NAME_BASE_REMOTE:$CI_COMMIT_TAG"
-
   IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
@@ -109,13 +104,12 @@ deploy_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-        git remote set-url localgit "$CI_REPOSITORY_URL_REMOTE"
-        git fetch localgit main
+        git fetch origin main
         MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
         TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
         if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
           echo "=== DESPLEGANDO VERSIÓN: $DEPLOY_TAG==="
-          docker pull "$IMAGE_NAME_BASE_REMOTE:$DEPLOY_TAG"
+          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose.deploy-production.yml down --remove-orphans
           docker-compose -f docker-compose.deploy-production.yml up -d --force-recreate
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
@@ -127,7 +121,7 @@ deploy_production:
         echo "No es un tag. Saltando build."
       fi
   after_script:
-    - docker logout $REGISTRY_URL_REMOTE
+    - docker logout $REGISTRY_URL
   rules:
     - if: $CI_COMMIT_TAG
       when: manual
