--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deploy_production:
     DEPLOY_TAG: "latest"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL_REMOTE"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
