--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build_image:
           MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
           TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
           if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
-                    echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin http://gitlab:5050
+                    echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
                     docker-compose -f docker-compose.yml build --no-cache --pull
                     docker tag spvending-api-image "$IMAGE_NAME"
                     docker push "$IMAGE_NAME"
@@ -97,7 +97,7 @@ deploy_production:
     DEPLOY_TAG: "latest"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL" http://gitlab:5050
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
