--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,7 +97,7 @@ deploy_production:
     DEPLOY_TAG: "latest"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL" http://gitlab:5050
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin http://gitlab:5050
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
