--- a/docker-compose.deploy-production.yml
+++ b/docker-compose.deploy-production.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   spvending-api-image:
-    image: 192.168.0.11:5050/adrian-manuel/spvending-managment:${DEPLOY_TAG}
+    image: gitlab:5050/adrian-manuel/spvending-managment:${DEPLOY_TAG}
     container_name: spvending-api-container
     ports:
       - "8080:8080"
