--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,7 +97,7 @@ deploy_production:
     DEPLOY_TAG: "latest"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin http://192.168.0.11:5050
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
@@ -118,7 +118,7 @@ deploy_production:
         echo "No es un tag. Saltando build."
       fi
   after_script:
-    - docker logout $REGISTRY_URL
+    - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG
       when: manual
