--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,7 +95,7 @@ deploy_production:
   services: []
   variables:
     DEPLOY_TAG: "latest"
-    DOCKER_HOST: tcp://docker:2376
+    DOCKER_HOST: unix:///var/run/docker.sock
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
   script:
