--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
 stages:
   - sonarqube
   - build
-  - deploy_production
+  - deploy_staging
 
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
@@ -87,17 +87,17 @@ build_image:
       when: always
   needs: ["sonarqube"]
 
-deploy_production:
-  stage: deploy_production
+deploy_staging:
+  stage: deploy_staging
   tags:
-    - production
+    - staging
   needs: ["build_image"]
   services: []
   variables:
     DEPLOY_TAG: "latest"
     DOCKER_HOST: unix:///var/run/docker.sock
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
