--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,15 +4,17 @@ variables:
   REGISTRY_URL: "gitlab:5050"
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
+
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
   IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
   IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
 stages:
+  - test
   - sonarqube
   - build
-  - deploy_staging
+  - deploy
 
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
@@ -61,24 +63,24 @@ build_image:
 
   script:
     - |
-        if [ -n "$CI_COMMIT_TAG" ]; then
-          git fetch origin main
-          MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
-          TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
-          if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
-                    echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
-                    docker-compose -f docker-compose.yml build --no-cache --pull
-                    docker tag spvending-api-image "$IMAGE_NAME"
-                    docker push "$IMAGE_NAME"
-                    docker tag spvending-api-image "$IMAGE_NAME_LATEST"
-                    docker push "$IMAGE_NAME_LATEST"
-            else
-                echo "El tag NO proviene de main. Saltando build."
-          fi
-            else
-              echo "No es un tag. Saltando build."
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+                  echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
+                  docker-compose -f docker-compose.yml build --no-cache --pull
+                  docker tag spvending-api-image "$IMAGE_NAME"
+                  docker push "$IMAGE_NAME"
+                  docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+                  docker push "$IMAGE_NAME_LATEST"
+          else
+              echo "El tag NO proviene de main. Saltando build."
         fi
-    
+          else
+            echo "No es un tag. Saltando build."
+      fi
+  
 
   after_script:
     - docker logout $REGISTRY_URL
@@ -87,17 +89,16 @@ build_image:
       when: always
   needs: ["sonarqube"]
 
-deploy_staging:
-  stage: deploy_staging
+deploy_app:
+  stage: deploy
   tags:
-    - staging
+    - deploy
   needs: ["build_image"]
   services: []
   variables:
-    DEPLOY_TAG: "latest"
-    DOCKER_HOST: unix:///var/run/docker.sock
+    DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
@@ -105,10 +106,10 @@ deploy_staging:
         MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
         TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
         if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
-          echo "=== DESPLEGANDO VERSIÓN: $DEPLOY_TAG==="
-          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
-          docker-compose -f docker-compose.deploy-production.yml down --remove-orphans
-          docker-compose -f docker-compose.deploy-production.yml up -d --force-recreate
+          echo "=== DESPLEGANDO VERSIÓN ==="
+          docker pull "$IMAGE_NAME_LATEST"
+          docker-compose -f docker-compose.deploy.yml down --remove-orphans
+          docker-compose -f docker-compose.deploy.yml up -d --force-recreate
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
         else
@@ -118,7 +119,7 @@ deploy_staging:
         echo "No es un tag. Saltando build."
       fi
   after_script:
-    - docker logout $CI_REGISTRY
+    - docker logout $REGISTRY_URL
   rules:
     - if: $CI_COMMIT_TAG
-      when: manual
+      when: always
