--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ stages:
   - test
   - sonarqube
   - build
-  - deploy
+  - deploy_staging
+  - deploy_production
 
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
@@ -89,8 +90,8 @@ build_image:
       when: always
   needs: ["sonarqube"]
 
-deploy_app:
-  stage: deploy
+deploy_app_staging:
+  stage: deploy_staging
   tags:
     - deploy
   needs: ["build_image"]
@@ -109,8 +110,43 @@ deploy_app:
         if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
-          docker-compose -f docker-compose.deploy.yml down --remove-orphans
-          docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+          docker-compose -f docker-compose.deploy-staging.yml down --remove-orphans
+          docker-compose -f docker-compose.deploy-staging.yml up -d --force-recreate
+          echo "=== CONTENEDORES EN EJECUCIÓN ==="
+          docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+        else
+          echo "El tag NO proviene de main. Saltando build."
+        fi
+      else
+        echo "No es un tag. Saltando build."
+      fi
+  after_script:
+    - docker logout $REGISTRY_URL
+  rules:
+    - if: $CI_COMMIT_TAG
+
+deploy_app_production:
+  stage: deploy_production
+  tags:
+    - deploy
+  needs: ["deploy_app_staging"]
+  services: []
+  variables:
+    DEPLOY_TAG: "latest"
+    DOCKER_HOST: "unix:///var/run/docker.sock"
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
+  script:
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
+        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
+        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+          echo "=== DESPLEGANDO VERSIÓN ==="
+          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
+          docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
+          docker-compose -f docker-compose.deploy-production.yml up -d --force-recreate
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
         else
