--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,9 +34,7 @@ sonarqube:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
               git fetch origin main
-              MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
-              TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
-              if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+              if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
                 echo "Iniciando análisis con SonarQube..."
                 mvn clean verify
                 apt-get update && apt-get install -y wget unzip
