--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,9 +64,7 @@ build_image:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
-        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
-        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
-        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
                   echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
                   docker-compose -f docker-compose.yml build --no-cache --pull
                   docker tag spvending-api-image "$IMAGE_NAME"
@@ -103,9 +101,7 @@ deploy_app_staging:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
-        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
-        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
-        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose.deploy-staging.yml down --remove-orphans
@@ -138,9 +134,7 @@ deploy_app_production:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
-        MERGE_BASE=$(git merge-base "$CI_COMMIT_TAG" origin/main)
-        TAG_COMMIT=$(git rev-list -n 1 "$CI_COMMIT_TAG")
-        if [ "$MERGE_BASE" = "$TAG_COMMIT" ]; then
+        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
