--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,8 +104,8 @@ deploy_app_staging:
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
-          docker-compose -f docker-compose.deploy-staging.yml down --remove-orphans
-          docker-compose -f docker-compose.deploy-staging.yml up -d --force-recreate
+          docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
+          docker-compose -f docker-compose-staging.deploy.yml up -d --force-recreate
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
         else
@@ -138,7 +138,7 @@ deploy_app_production:
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
-          docker-compose -f docker-compose.deploy-production.yml up -d --force-recreate
+          docker-compose -f docker-compose-production.deploy.yml up -d --force-recreate
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
           docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
         else
