--- a/docker-compose-production.deploy.yml
+++ b/docker-compose-production.deploy.yml
@@ -2,9 +2,9 @@ version: "3.9"
 services:
   spvending-api-image:
     image: gitlab:5050/adrian-manuel/spvending-managment:${DEPLOY_TAG}
-    container_name: spvending-api-container
+    container_name: spvending-api-production-container
     ports:
-      - "8080:8080"
+      - "8081:8080"
     networks:
       - spring-network
     depends_on:
@@ -15,7 +15,7 @@ services:
     image: redis
     container_name: redis_cache
     ports:
-      - "6379:6379"
+      - "6380:6379"
     networks:
       - spring-network
 
@@ -27,7 +27,7 @@ services:
       POSTGRES_DB: tenants_managment
       POSTGRES_USER: postgres
     ports:
-      - "5432:5432"
+      - "5433:5432"
     networks:
       - spring-network
     volumes:
