--- a/docker-compose-production.deploy.yml
+++ b/docker-compose-production.deploy.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  spvending-api-image:
+  spvending-api-image-production:
     image: gitlab:5050/adrian-manuel/spvending-managment:${DEPLOY_TAG}
     container_name: spvending-api-production-container
     ports:
