prueba de ci cd

--- a/docker-compose-production.deploy.yml
+++ b/docker-compose-production.deploy.yml
@@ -10,7 +10,8 @@ services:
     depends_on:
       - postgres-production
       - redis-production
-
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-production:5432/tenants_managment_production
   redis-production:
     image: redis
     container_name: redis_cache_production
