--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Tenants_Managment
 server.port=8080
 # Postgres
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:abc123.}
+spring.datasource.url=jdbc:postgresql://localhost:5432/tenants_managment
+spring.datasource.username=postgres
+spring.datasource.password=abc123.
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Redis
-spring.data.redis.host=${SPRING_REDIS_HOST}
+spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
 # Swagger openapi
